--- a/inventory/btccluster/group_vars/k8s-cluster/k8s-net-flannel.yml
+++ b/inventory/btccluster/group_vars/k8s-cluster/k8s-net-flannel.yml
@@ -14,5 +14,6 @@
 # for experimental backend
 # please refer to flannel's docs : https://github.com/coreos/flannel/blob/master/README.md
 # flannel_backend_type: "vxlan"
+flannel_backend_type: "host-gw"
 # flannel_vxlan_vni: 1
 # flannel_vxlan_port: 8472
