config dla btccluser

--- a/inventory/btccluster/hosts.yml
+++ b/inventory/btccluster/hosts.yml
@@ -2,11 +2,11 @@ all:
   vars:
     ansible_user: k8s
   hosts:
-    node1:
+    bartcluster:
       ansible_host: 192.168.8.104
       ip: 192.168.8.104
       access_ip: 192.168.8.104
-    node2:
+    fujitsu:
       ansible_host: 192.168.8.124
       ip: 192.168.8.124
       access_ip: 192.168.8.124
@@ -18,15 +18,15 @@ all:
     kube-master:
       hosts:
         thinkcentre:
-        node2:
+        fujitsu:
     kube-node:
       hosts:
-        node1:
-        node2:
+        bartcluster:
+        fujitsu:
     etcd:
       hosts:
-        node1:
-        node2:
+        bartcluster:
+        fujitsu:
         thinkcentre:
     k8s-cluster:
       children:
