--- a/inventory/kimp2c/inventory.ini
+++ b/inventory/kimp2c/inventory.ini
@@ -2,6 +2,13 @@
 # ## different ip than the default iface
 # ## We should set etcd_member_name for etcd cluster. The node that is not a etcd member do not need to set the value, or can set the empty string value.
 [all]
+ks01.g2.kim.gov.pl ansible_host=172.17.66.11	
+# ks02.g2.kim.gov.pl ansible_host=172.17.66.12	
+ks03.g2.kim.gov.pl ansible_host=172.17.66.13	
+ks04.g2.kim.gov.pl ansible_host=172.17.66.14	
+ks05.g2.kim.gov.pl ansible_host=172.17.66.15	
+ks06.g2.kim.gov.pl ansible_host=172.17.66.16	
+
 # node1 ansible_host=95.54.0.12  # ip=10.3.0.1 etcd_member_name=etcd1
 # node2 ansible_host=95.54.0.13  # ip=10.3.0.2 etcd_member_name=etcd2
 # node3 ansible_host=95.54.0.14  # ip=10.3.0.3 etcd_member_name=etcd3
@@ -14,25 +21,19 @@
 # bastion ansible_host=x.x.x.x ansible_user=some_user
 
 [kube_control_plane]
-# node1
-# node2
-# node3
+ks04.g2.kim.gov.pl
+ks05.g2.kim.gov.pl
 
 [etcd]
-# node1
-# node2
-# node3
+ks04.g2.kim.gov.pl
+ks05.g2.kim.gov.pl
+ks06.g2.kim.gov.pl
 
 [kube_node]
-# node2
-# node3
-# node4
-# node5
-# node6
-
-[calico_rr]
+ks04.g2.kim.gov.pl
+ks05.g2.kim.gov.pl
+ks06.g2.kim.gov.pl
 
 [k8s_cluster:children]
 kube_control_plane
 kube_node
-calico_rr
